    "textured video"). Port number takes precedence; the plugins will fall
    back on another port of the same type (if a type was specified) then on
    whatever they can find.
    XvMC does not support port selection at present.
    (Backported from the 1.2 branch.)
  * Fix MPEG TS audio stream problems introduced in 1.1.13.

xine-lib (1.1.13) 2008-06-15
  * Security fixes:
    - Buffer overflow in the NSF demuxer which may allow remote attackers to
      cause a denial of service (crash) or possibly execute arbitrary code
      via an NSF file with a long title or copyright message. (CVE-2008-1878)
    - For extra safety against possible Integer overflows like the ones found
      in CVE-2008-1482, backport more calloc usage from 1.2 branch.
  * Improved JACK output plugin.
  * Added MIME types and .mpp for musepack.
  * Fixed display of some MJPEG streams (YUVJ420P).
  * Deprecate xine_xmalloc() function, see src/xine-utils/utils.c for more
    information about the reason.
  * Provide a useful implementation of xine_register_log_cb().

xine-lib (1.1.12) 2008-04-14
  * Security fixes:
    - Insufficient boundary check in speex audio decoder. (CVE-2008-1686)
  * Fixed and improved the PulseAudio driver.
  * Fixed a regression in 1.1.11.1 which broke Quicktime container handling.
  * And another, this time in the Matroska demuxer.
  * Added a tool to assist with generating front ends' desktop files. It
    lists MIME types & filename extensions known to the installed xine-lib.
  * Various Real codec improvements, including:
    - RV20 no longer causes segfaults (observed on amd64);
    - Cook is now handled by ffmpeg.
  * Added a video output plugin intended for passing raw data to the front end.

xine-lib (1.1.11.1) 2008-03-30
  * Security fixes:
    - Integer overflows in FLV, Qt, Real, WC3Movie, Matroska and FILM
      demuxers, allowing remote attackers to trigger heap overflows and
      possibly execute arbitrary code. (CVE-2008-1482)